--- a/CCindex.html
+++ b/CCindex.html
@@ -21,7 +21,7 @@
 
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
-            <div class="row">
+            <div class="row row-content align-items-center">
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
                     <img src="img/logo.png" class="img-fluid" />
                 </div>
@@ -29,73 +29,12 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-                <div class="col-sm col-md-4 col-xl-2 mt-4">
-                    <a role="button" data-toggle="modal" data-target="#reserveModal" class="btn btn-info btn-large mt-4"> Reserve Campsite </a>
+                <div class="col-sm col-md-4 col-xl-2">
+                    <a href="#reserveForm" role="button" class="btn btn-info btn-large mt-4" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>"> Reserve Campsite </a>
                 </div>
             </div>
         </div>
     </header>
-
-    <div id="reserveModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-               <div class="modal-header bg-info text-white">
-                    <h3> Reserve a Campsite</h3>
-                    <button type="button" class="close" data-dismiss="modal"> &times; </button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <form id="reserveForm">
-                            <div class="form-group row">
-                                <div class="col-sm-6">
-                                    <label for="numCampers" class="col-form-label"> Number of Campers </label>
-                                </div>
-                                <div class="col">
-                                    <select class="form-control" id="numCampers">
-                                        <option>Select...</option>
-                                        <option value ="1">1</option>
-                                        <option value ="2">2</option>
-                                        <option value ="3">3</option>
-                                        <option value ="4">4</option>
-                                        <option value ="5">5</option>
-                                        <option value ="6">6</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-sm-6">
-                                    <label for="date" class="col-form-label"> Date </label>
-                                </div>
-                                <div class="col">
-                                    <input type="date" class="form-control" id="date" name="date" placeholder="mm/dd/yyyy" />
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-sm-6">
-                                    <label for="campType" class="col-form-label"> Campsite Type </label>
-                                </div>
-                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-success active">
-                                        <input type="radio" name="siteType" id="siteTent" autocomplete="off" checked> Tent
-                                    </label>
-                                    <label class="btn btn-primary">
-                                        <input type="radio" name="siteType" id="siteRV" autocomplete="off"> RV
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal"> Cancel </button>
-                                    <button type="submit" class="btn btn-primary"> Search </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
@@ -139,9 +78,14 @@
                                     <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
                                 </div>
                                 <div class="col">
-                                    <div class="form-check">
+                                    <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="checkbox">
                                         <label class="form-check-label"> Remember me </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" onclick="myFunction()"> 
+                                        <label class="form-check-label"> Show Password </label>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
@@ -244,7 +188,47 @@
                 </div>
             </div>
          </div>
-    </div>     
+         <div class="row row-content align-items-center">
+             <div class="col-sm-6 mx-auto">
+                 <div class="card">
+                     <h3 class="card-header bg-info text-white"> Reserve a Campsite</h3>
+                    <div class="card-body">
+                        <form id="reserveForm">
+                            <div class="form-group row">
+                                <div class="col-sm-6">
+                                    <label for="numCampers" class="col-form-label"> Number of Campers </label>
+                                </div>
+                                <div class="col">
+                                    <select class="form-control" id="numCampers">
+                                        <option>Select...</option>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                        <option>6</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-6">
+                                    <label for="date" class="col-form-label"> Date </label>
+                                </div>
+                                <div class="col">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="mm/dd/yyyy" />
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col">
+                                    <button type="button" class="btn btn-primary"> Search </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+             </div>
+         </div>
+    </div>
     <footer class="site-footer">
         <div class="container">
             <div class="row row-content align-items-center">
@@ -276,6 +260,20 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+
+        function myFunction() {
+            var x = document.getElementById("loginPassword");
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
+            }
+        }
+    </script>
 </body>
 
 </html>
